publish hawkeye data to network tables