@@ -53,6 +53,10 @@ import com.google.ar.core.exceptions.UnavailableApkTooOldException;
 import com.google.ar.core.exceptions.UnavailableArcoreNotInstalledException;
 import com.google.ar.core.exceptions.UnavailableSdkTooOldException;
 import com.google.ar.core.exceptions.UnavailableUserDeclinedInstallationException;
+import com.team4099.lib.HawkeyeResult;
+import com.team4099.lib.geo.Quaternion;
+import com.team4099.lib.networking.NTDataPublisher;
+import com.team4099.lib.networking.NetworkTablesManager;
 
 import java.io.IOException;
 import java.nio.ByteBuffer;
@@ -153,6 +157,9 @@ public class ComputerVisionActivity extends AppCompatActivity implements GLSurfa
   private final FrameTimeHelper renderFrameTimeHelper = new FrameTimeHelper();
   private final FrameTimeHelper cpuImageFrameTimeHelper = new FrameTimeHelper();
 
+  private NetworkTablesManager ntManager;
+  private NTDataPublisher ntPublisher;
+
   @Override
   protected void onCreate(Bundle savedInstanceState) {
     super.onCreate(savedInstanceState);
@@ -181,6 +188,11 @@ public class ComputerVisionActivity extends AppCompatActivity implements GLSurfa
     getLifecycle().addObserver(cpuImageFrameTimeHelper);
 
     installRequested = false;
+
+    this.ntManager = NetworkTablesManager.INSTANCE;
+
+    // TODO add a settings thing to control name
+    this.ntPublisher = new NTDataPublisher("hawkeye");
   }
 
   @Override
@@ -376,7 +388,7 @@ public class ComputerVisionActivity extends AppCompatActivity implements GLSurfa
       ByteBuffer processedImageBytesGrayscale = null;
       // Do not process the image with edge dectection algorithm if it is not being displayed.
       if (isCVModeOn) {
-        Pair<ByteBuffer, ApriltagPose> processedOutput =
+        Pair<ByteBuffer, List<ApriltagPose>> processedOutput =
             aprilTagDetector.detect(
                 image.getWidth(),
                 image.getHeight(),
@@ -385,33 +397,26 @@ public class ComputerVisionActivity extends AppCompatActivity implements GLSurfa
                     frame.getCamera().getImageIntrinsics()
                     );
         processedImageBytesGrayscale = processedOutput.getFirst();
-        ApriltagPose pose = processedOutput.getSecond();
-        Triple<Double, Double, Double> angles1 = rotationMatrixToQuaternion(pose.rotation_1).getEulerAnglesDegrees();
-        double yaw1 = (double) angles1.getFirst();
-        double pitch1 = (double) angles1.getSecond();
-        double roll1 = (double) angles1.getThird();
+//        ApriltagPose pose = processedOutput.getSecond().get(0);
 
-        Triple<Double, Double, Double> angles2 = rotationMatrixToQuaternion(pose.rotation_2).getEulerAnglesDegrees();
-        double yaw2 = (double) angles2.getFirst();
-        double pitch2 = (double) angles2.getSecond();
-        double roll2 = (double) angles2.getThird();
+//        POSE_TEXT = String.format(
+//                POSE_INFO_TEXT_FORMAT,
+//                pose.id,
+//                pose.translationMeters_1[0],
+//                pose.translationMeters_1[1],
+//                pose.translationMeters_1[2],
+//                yaw1,
+//                pitch1,
+//                roll1,
+//                pose.translationMeters_2[0],
+//                pose.translationMeters_2[1],
+//                pose.translationMeters_2[2],
+//                yaw2,
+//                pitch2,
+//                roll2
+//        );
 
-        POSE_TEXT = String.format(
-                POSE_INFO_TEXT_FORMAT,
-                pose.id,
-                pose.translationMeters_1[0],
-                pose.translationMeters_1[1],
-                pose.translationMeters_1[2],
-                yaw1,
-                pitch1,
-                roll1,
-                pose.translationMeters_2[0],
-                pose.translationMeters_2[1],
-                pose.translationMeters_2[2],
-                yaw2,
-                pitch2,
-                roll2
-        );
+        ntPublisher.accept(new HawkeyeResult((System.nanoTime() - frame.getTimestamp())/(1E6), processedOutput.getSecond()));
       }
       if (isDisplayOn){
         cpuImageRenderer.drawWithCpuImage(
@@ -443,23 +448,24 @@ public class ComputerVisionActivity extends AppCompatActivity implements GLSurfa
         throw new IllegalArgumentException(
             "Expected image in I8 format, got format " + image.format);
       }
-      Pair<ByteBuffer, ApriltagPose> processedOutput =
+      Pair<ByteBuffer, List<ApriltagPose>> processedOutput =
               aprilTagDetector.detect(image.width, image.height, /* stride= */ image.width, image.buffer,
                       frame.getCamera().getImageIntrinsics());
       ByteBuffer processedImageBytesGrayscale = processedOutput.getFirst();
-      ApriltagPose pose = processedOutput.getSecond();
-      POSE_TEXT = String.format(
-              POSE_INFO_TEXT_FORMAT,
-              pose.id,
-              pose.translationMeters_1[0],
-              pose.translationMeters_1[1],
-              pose.translationMeters_1[2],
-              pose.translationMeters_2[0],
-              pose.translationMeters_2[1],
-              pose.translationMeters_2[2]
-      );
+//      ApriltagPose pose = processedOutput.getSecond();
+//      POSE_TEXT = String.format(
+//              POSE_INFO_TEXT_FORMAT,
+//              pose.id,
+//              pose.translationMeters_1[0],
+//              pose.translationMeters_1[1],
+//              pose.translationMeters_1[2],
+//              pose.translationMeters_2[0],
+//              pose.translationMeters_2[1],
+//              pose.translationMeters_2[2]
+//      );
 
 
+      ntPublisher.accept(new HawkeyeResult((System.nanoTime() - frame.getTimestamp())/(1E6), processedOutput.getSecond()));
       // You should always release frame buffer after using. Otherwise the next call to
       // submitFrame() may fail.
       textureReader.releaseFrame(gpuDownloadFrameBufferIndex);
